@@ -39,13 +39,6 @@
       <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/resources-1.1.6/grails-app/i18n" isTestSource="false" />
       <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/resources-1.1.6/grails-app/taglib" isTestSource="false" />
     </content>
-    <content url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/spring-security-core-1.2.7.2">
-      <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/spring-security-core-1.2.7.2/src/java" isTestSource="false" />
-      <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/spring-security-core-1.2.7.2/src/groovy" isTestSource="false" />
-      <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/spring-security-core-1.2.7.2/grails-app/i18n" isTestSource="false" />
-      <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/spring-security-core-1.2.7.2/grails-app/services" isTestSource="false" />
-      <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/spring-security-core-1.2.7.2/grails-app/taglib" isTestSource="false" />
-    </content>
     <content url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/svn-1.0.1">
       <sourceFolder url="file://$USER_HOME$/.grails/2.0.3/projects/cinnamonDb/plugins/svn-1.0.1/src/groovy" isTestSource="false" />
     </content>
@@ -59,8 +52,6 @@
     <orderEntry type="module-library" exported="">
       <library name="Grails User Library (cinnamonBase-grailsPlugins)">
         <CLASSES>
-          <root url="jar://$USER_HOME$/.grails/ivy-cache/org.springframework.security/spring-security-core/jars/spring-security-core-3.0.7.RELEASE.jar!/" />
-          <root url="jar://$USER_HOME$/.grails/ivy-cache/org.springframework.security/spring-security-web/jars/spring-security-web-3.0.7.RELEASE.jar!/" />
           <root url="jar://$USER_HOME$/.grails/ivy-cache/org.apache.lucene/lucene-core/jars/lucene-core-3.5.0.jar!/" />
           <root url="jar://$USER_HOME$/.grails/ivy-cache/jakarta-regexp/jakarta-regexp/jars/jakarta-regexp-1.4.jar!/" />
           <root url="jar://$USER_HOME$/.grails/ivy-cache/org.apache.lucene/lucene-queries/jars/lucene-queries-3.5.0.jar!/" />
