@@ -7,6 +7,7 @@ import cinnamon.exceptions.CinnamonException
 import cinnamon.i18n.LocalMessage
 
 class IndexType implements Serializable  {
+   
     public enum DataType {
         STRING, BOOLEAN, DATE_TIME, INTEGER, DECIMAL, TIME, TEXT
     }
@@ -15,6 +16,10 @@ class IndexType implements Serializable  {
         name unique:true, size: 1..Constants.NAME_LENGTH
     }
 
+    static mapping = {
+        version 'obj_version'
+    }
+    
     String name
     Class<? extends Indexer> indexerClass
     Class<? extends ValueAssistanceProvider> vaProviderClass
